fixed jumpy navbar

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -141,6 +141,7 @@ li.dropdown {
 }
 
 .menu {
+    width: 100%;
     display: block;
 }
 
